# august-core

./: Cargo.toml  README.md
examples/: simple.rs
src/: config.rs  core.rs  error.rs  lib.rs  main.rs
src/context/: mod.rs
src/executor/: mod.rs
src/nlp/: mod.rs
src/planner/: mod.rs
src/storage/: mod.rs
