[package]
name = "august-core"
version = "0.1.0"
edition = "2024"

[dependencies]
sled = "0.34.7"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
async-trait = "0.1.89"
log = "0.4.27"
futures = { version = "0.3.31", features = ["alloc", "async-await", "std"] }

[dev-dependencies]
tokio = "1.47.1"

[dependencies.august-plugin-system]
git = "https://github.com/BleynChannel/august-plugin-system.git"
tag = "1.0.0-alpha.3"
features = ["derive", "archive"]
