[package]
name = "august-core"
version = "0.1.0"
edition = "2024"

[dependencies]
sled = "0.34.7"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
async-trait = "0.1.89"
log = "0.4.27"
futures = { version = "0.3.31", features = ["alloc", "async-await", "std"] }
thiserror = "2.0.16"
hashbrown = { version = "0.15.5", features = ["serde", "rayon"] }
rayon = "1.11.0"

[dev-dependencies]
anyhow = "1.0.99"
env_logger = "0.11.8"
tokio = { version = "1.47.1", features = ["full"] }

[dependencies.plux]
git = "https://github.com/BleynChannel/plux-rs.git"
tag = "1.0.0-alpha.3"
features = ["derive", "archive"]
